# bep-demo

./: .bazelignore  .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum
java/greeter/: BUILD.bazel  Greeter.java  GreeterTest.java
tools/bepstream/: BUILD.bazel  main.go  main_test.go
tools/bepstream/proto/: BUILD.bazel  build_event_stream.proto
tools/bepstream/proto/src/main/protobuf/: action_cache.proto  command_line.proto  failure_details.proto  invocation_policy.proto  option_filters.proto  strategy_policy.proto
