load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/example/bep-demo
# gazelle:resolve go google.golang.org/protobuf/proto @org_golang_google_protobuf//proto
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
