module(
    name = "bep-demo",
    version = "0.0.1",
)

# Java rules
bazel_dep(name = "rules_java", version = "8.6.3")

# Maven dependencies
bazel_dep(name = "rules_jvm_external", version = "6.6")

# Go rules
bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "gazelle", version = "0.41.0")

# Protocol buffers
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "protobuf", version = "29.2")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.4")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "org_golang_google_protobuf")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "junit:junit:4.13.2",
    ],
)
use_repo(maven, "maven")
